--- a/SwiftAdvancePushApp/Base.lproj/Main.storyboard
+++ b/SwiftAdvancePushApp/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1713" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="yNX-oN-wqc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="yNX-oN-wqc">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--Login View Controller-->
@@ -91,8 +91,8 @@
                     <navigationItem key="navigationItem" id="ZxK-JU-IUx"/>
                     <connections>
                         <outlet property="address" destination="iXs-YD-1Qc" id="GoJ-v1-fEg"/>
-                        <outlet property="label" destination="JEQ-6Z-ghP" id="LTv-bM-JOs"/>
                         <outlet property="password" destination="sPw-PK-kbS" id="Ipi-Zw-KVj"/>
+                        <outlet property="statusLabel" destination="JEQ-6Z-ghP" id="Gt8-L1-RGd"/>
                         <segue destination="af1-6H-w3q" kind="modal" identifier="login" id="9aJ-dw-lgP"/>
                     </connections>
                 </viewController>
@@ -178,9 +178,9 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <connections>
-                                            <outlet property="category" destination="kwh-V2-IDf" id="pNT-0X-MmP"/>
-                                            <outlet property="iconImageView" destination="wuQ-Ku-GEQ" id="uOL-th-x8s"/>
-                                            <outlet property="shopName" destination="BON-dO-cqp" id="DX2-Zd-Xlv"/>
+                                            <outlet property="category_top" destination="kwh-V2-IDf" id="zSr-Ue-EX9"/>
+                                            <outlet property="iconImageView_top" destination="wuQ-Ku-GEQ" id="Mic-AV-ARA"/>
+                                            <outlet property="shopName_top" destination="BON-dO-cqp" id="hMz-Dr-4ku"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -204,7 +204,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="fef-bF-Vmz"/>
                     <connections>
-                        <outlet property="label" destination="KcG-d5-K7B" id="adQ-F3-AlA"/>
+                        <outlet property="nicknameLabel" destination="KcG-d5-K7B" id="joq-Vu-yge"/>
                         <outlet property="shopTableView" destination="aPG-ld-O3Z" id="N0u-h8-uxd"/>
                         <segue destination="FSY-cS-XFO" kind="push" identifier="toShopPage" id="bFS-cg-a0M"/>
                     </connections>
@@ -234,7 +234,7 @@
                         <barButtonItem key="rightBarButtonItem" id="bGW-gV-QOu">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
-                                <action selector="tapFavorite:" destination="FSY-cS-XFO" id="Jyv-ry-pCp"/>
+                                <action selector="tapFavoriteBtn:" destination="FSY-cS-XFO" id="QwH-Pe-zKa"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -242,7 +242,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" prompted="NO"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="favorite" destination="bGW-gV-QOu" id="ozl-nP-ah2"/>
+                        <outlet property="favoriteBarButton" destination="bGW-gV-QOu" id="MhL-UC-Pjp"/>
                         <outlet property="shopView" destination="PhO-G0-GGH" id="Txy-L9-3fq"/>
                     </connections>
                 </viewController>
@@ -365,7 +365,7 @@
                                 <rect key="frame" x="40" y="206" width="240" height="237"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                <color key="separatorColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                <color key="separatorColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="favoriteTableCell" rowHeight="61" id="yrL-BT-go4" customClass="CustomCell" customModule="SwiftAdvancePushApp" customModuleProvider="target">
@@ -391,14 +391,14 @@
                                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="favoriteSwitch" destination="LXx-RA-QRH" id="zeb-XA-Ncg"/>
+                                            <outlet property="favoriteSwitch_favorite" destination="LXx-RA-QRH" id="srG-LE-peK"/>
                                             <outlet property="shopName_favorite" destination="Z09-TC-9l7" id="xZ1-Ap-5DH"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="oMc-NP-7So">
-                                <rect key="frame" x="102" y="457" width="117" height="50"/>
+                                <rect key="frame" x="111" y="469" width="99" height="39"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="setup"/>
                                 <connections>
@@ -488,7 +488,7 @@
                     <navigationItem key="navigationItem" id="081-CX-OVW"/>
                     <connections>
                         <outlet property="address" destination="vxp-VY-6dX" id="S5Z-MO-8Bz"/>
-                        <outlet property="label" destination="ruo-ce-8bR" id="nw0-CS-U8l"/>
+                        <outlet property="statusLabel" destination="ruo-ce-8bR" id="ZDR-cy-1gn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j1V-hg-ead" userLabel="First Responder" sceneMemberID="firstResponder"/>
